# money_manager

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: explore.ipynb
src/tracker/: __main__.py  analyzer.py  database.py  loader.py  logger.py  models.py
src/tracker/api/: main.py
