[project]
name = "money-manager"
version = "0.1.0"
description = "家計簿CSVをSQLiteに取り込んで分析するツール"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]